Axios call to habitica API now works and authenticates.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <section v-else>
         <p>Your current health is: <strong>20</strong></p>
         <div>
-          {{ info.status }}
+          {{ info }}
         </div>
       </section>
     </div>
