Save API responses into party, group etc .. more useful than generic ‘info’

--- a/index.html
+++ b/index.html
@@ -18,7 +18,11 @@
       <section v-else>
         <p>Your current health is: <strong>20</strong></p>
         <div>
-          {{ info }}
+          {{ group }}
+        </div>
+        <h1>Party Deets</h1>
+        <div>
+          {{ party }}
         </div>
       </section>
     </div>
