--- a/index.html
+++ b/index.html
@@ -4,26 +4,26 @@
     <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <link rel="stylesheet" media="screen" href="src/stylesheets/style.css">
   </head>
   <body>
     <div id="app">
-      <h1>Welcome to Habitica Dashboard</h1>
-      <section>
+      <!-- <h1>Welcome to Habitica Dashboard</h1> -->
+      <!-- <section>
         <label for="">Habitica UUID</label>  <input v-model="uuid"><br>
         <label for="">Habitica API Token</label> <input v-model="token">
-      </section>
+      </section> -->
       <section v-if="errored">
         <p>We're sorry, we're not able to retrieve this information at the moment, please try back later</p>
       </section>
       <section v-else>
-        <p>Your current health is: <strong>20</strong></p>
-        <div>
-          {{ group }}
-        </div>
-        <h1>Party Deets</h1>
-        <div>
+        <h1>
+          {{ group.name }}
+        </h1>
+        Group Image
+        <h2>
           {{ party }}
-        </div>
+        </h2>
       </section>
     </div>
   </body>
